--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "matplotlib>=3.10.1",
+    "seaborn>=0.13.2",
     "streamlit>=1.45.0",
 ]
